--- a/Homework_4/Homework_4/Homework_4.sim/sim_1/behav/xsim/xsim.dir/Homework_4_tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/Homework_4/Homework_4/Homework_4.sim/sim_1/behav/xsim/xsim.dir/Homework_4_tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Feb  3 14:20:48 2021</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Feb  5 01:01:37 2021</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>9a52a168b6894c00b41a46130b048f52</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>6</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>728e2125-5086-4ab6-b695-c7fc64746237</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>728e2125-5086-4ab6-b695-c7fc64746237</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -35,17 +35,27 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
+<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
+    <TD>debug=typical</TD>
+    <TD>dpi_used=false</TD>
+    <TD>file_counter=9</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
+    <TD>hwcosim=false</TD>
+    <TD>sdfmodeling=false</TD>
+    <TD>vhdl2008=false</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>iteration=2</TD>
-    <TD>runtime=1 us</TD>
-    <TD>simulation_memory=7412_KB</TD>
-    <TD>simulation_time=0.75_sec</TD>
-</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
+<TR ALIGN='LEFT'>    <TD>compiler_memory=46164_KB</TD>
+    <TD>compiler_time=0.83_sec</TD>
+    <TD>simulation_image_code=77 KB</TD>
+    <TD>simulation_image_data=2 KB</TD>
+</TR><TR ALIGN='LEFT'>    <TD>total_instances=8</TD>
+    <TD>total_nets=0</TD>
+    <TD>total_processes=10</TD>
+    <TD>xilinx_hdl_libraries_used=secureip </TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
