--- a/Lab1/Lab_1/Lab_1.runs/impl_1/usage_statistics_webtalk.html
+++ b/Lab1/Lab_1/Lab_1.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Feb 10 19:54:37 2021</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Feb 12 14:02:54 2021</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>8ce48cac03de4947b1a01c317ad321b4</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>20</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>21</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>87423797bdee5a0e97c4161dcfe31192</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>87423797bdee5a0e97c4161dcfe31192</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -31,16 +31,16 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>basedialog_cancel=16</TD>
-   <TD>basedialog_ok=41</TD>
-   <TD>basedialog_yes=26</TD>
+<TR ALIGN='LEFT'>   <TD>basedialog_cancel=17</TD>
+   <TD>basedialog_ok=42</TD>
+   <TD>basedialog_yes=27</TD>
    <TD>boardchooser_board_table=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=1</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
    <TD>coretreetablepanel_core_tree_table=2</TD>
    <TD>createsrcfiledialog_file_name=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=137</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=72</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=156</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=75</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
    <TD>graphicalview_zoom_fit=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_in=135</TD>
@@ -56,7 +56,7 @@
    <TD>messagewithoptiondialog_dont_show_this_dialog_again=3</TD>
    <TD>pacodeeditor_goto_definition=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=1</TD>
-   <TD>pacommandnames_auto_connect_target=9</TD>
+   <TD>pacommandnames_auto_connect_target=12</TD>
    <TD>pacommandnames_open_project=1</TD>
    <TD>pacommandnames_simulation_live_break=19</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_run=6</TD>
@@ -66,17 +66,17 @@
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_zoom_out=11</TD>
    <TD>paviews_code=4</TD>
    <TD>paviews_device=13</TD>
-   <TD>paviews_project_summary=22</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_open_target=8</TD>
-   <TD>programdebugtab_program_device=16</TD>
-   <TD>programfpgadialog_program=19</TD>
+   <TD>paviews_project_summary=24</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_open_target=11</TD>
+   <TD>programdebugtab_program_device=18</TD>
+   <TD>programfpgadialog_program=21</TD>
    <TD>progressdialog_cancel=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_choose_project_location=1</TD>
    <TD>projectnamechooser_project_name=1</TD>
    <TD>rdicommands_copy=1</TD>
    <TD>rdicommands_paste=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>rdicommands_redo=1</TD>
-   <TD>rdicommands_save_file=70</TD>
+   <TD>rdicommands_save_file=76</TD>
    <TD>rdicommands_waveform_save_configuration=5</TD>
    <TD>rdiviews_waveform_viewer=105</TD>
 </TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=9</TD>
@@ -88,32 +88,33 @@
    <TD>srcchooserpanel_create_file=2</TD>
    <TD>srcchooserpanel_make_local_copy_of_these_files_into=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>srcchoosertable_src_chooser_table=2</TD>
-   <TD>syntheticagettingstartedview_recent_projects=8</TD>
+   <TD>syntheticagettingstartedview_recent_projects=10</TD>
    <TD>syntheticastatemonitor_cancel=1</TD>
-   <TD>taskbanner_close=8</TD>
-</TR><TR ALIGN='LEFT'>   <TD>touchpointsurveydialog_no=1</TD>
+   <TD>taskbanner_close=9</TD>
+</TR><TR ALIGN='LEFT'>   <TD>tclconsoleview_tcl_console_code_editor=1</TD>
+   <TD>touchpointsurveydialog_no=1</TD>
    <TD>waveformnametree_waveform_name_tree=26</TD>
    <TD>waveformview_goto_last_time=5</TD>
-   <TD>waveformview_goto_time_0=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>waveformview_next_transition=110</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformview_goto_time_0=2</TD>
+   <TD>waveformview_next_transition=110</TD>
    <TD>waveformview_previous_transition=29</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=1</TD>
-   <TD>autoconnecttarget=8</TD>
+   <TD>autoconnecttarget=11</TD>
    <TD>closeproject=2</TD>
    <TD>coreview=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>customizecore=1</TD>
    <TD>editundo=1</TD>
    <TD>fliptoviewtaskimplementation=1</TD>
-   <TD>launchprogramfpga=20</TD>
+   <TD>launchprogramfpga=22</TD>
 </TR><TR ALIGN='LEFT'>   <TD>newproject=1</TD>
-   <TD>openhardwaremanager=11</TD>
+   <TD>openhardwaremanager=13</TD>
    <TD>openproject=1</TD>
    <TD>openrecenttarget=8</TD>
 </TR><TR ALIGN='LEFT'>   <TD>programdevice=5</TD>
-   <TD>runbitgen=30</TD>
+   <TD>runbitgen=31</TD>
    <TD>runimplementation=2</TD>
    <TD>showview=7</TD>
 </TR><TR ALIGN='LEFT'>   <TD>simulationbreak=19</TD>
@@ -127,7 +128,7 @@
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=13</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=15</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -173,10 +174,10 @@
 </TR><TR ALIGN='LEFT'>    <TD>gnd=8</TD>
     <TD>ibuf=7</TD>
     <TD>lut1=6</TD>
-    <TD>lut2=83</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=21</TD>
-    <TD>lut4=49</TD>
-    <TD>lut5=50</TD>
+    <TD>lut2=80</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=23</TD>
+    <TD>lut4=51</TD>
+    <TD>lut5=51</TD>
     <TD>lut6=155</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mmcme2_adv=1</TD>
     <TD>obufds=4</TD>
@@ -194,10 +195,10 @@
 </TR><TR ALIGN='LEFT'>    <TD>gnd=8</TD>
     <TD>ibuf=8</TD>
     <TD>lut1=6</TD>
-    <TD>lut2=83</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=21</TD>
-    <TD>lut4=49</TD>
-    <TD>lut5=50</TD>
+    <TD>lut2=80</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=23</TD>
+    <TD>lut4=51</TD>
+    <TD>lut5=51</TD>
     <TD>lut6=155</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mmcme2_adv=1</TD>
     <TD>obufds=4</TD>
@@ -261,6 +262,172 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>cfgbvs-1=1</TD>
+</TR>   </TABLE>
+   </TD></TR>
+  </TABLE><BR>
+ <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_methodology</B></TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>-append=default::[not_specified]</TD>
+    <TD>-checks=default::[not_specified]</TD>
+    <TD>-fail_on=default::[not_specified]</TD>
+    <TD>-force=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-format=default::[not_specified]</TD>
+    <TD>-messages=default::[not_specified]</TD>
+    <TD>-name=default::[not_specified]</TD>
+    <TD>-return_string=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-slack_lesser_than=default::[not_specified]</TD>
+    <TD>-waived=default::[not_specified]</TD>
+</TR>   </TABLE>
+   </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>ckld-2=1</TD>
+    <TD>timing-17=28</TD>
+    <TD>timing-27=1</TD>
+    <TD>xdcc-2=1</TD>
+</TR>   </TABLE>
+   </TD></TR>
+  </TABLE><BR>
+ <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_power</B></TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>-advisory=default::[not_specified]</TD>
+    <TD>-append=default::[not_specified]</TD>
+    <TD>-file=[specified]</TD>
+    <TD>-format=default::text</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-hier=default::power</TD>
+    <TD>-hierarchical_depth=default::4</TD>
+    <TD>-l=default::[not_specified]</TD>
+    <TD>-name=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-no_propagation=default::[not_specified]</TD>
+    <TD>-return_string=default::[not_specified]</TD>
+    <TD>-rpx=[specified]</TD>
+    <TD>-verbose=default::[not_specified]</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-vid=default::[not_specified]</TD>
+    <TD>-xpe=default::[not_specified]</TD>
+</TR>   </TABLE>
+   </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>airflow=250 (LFM)</TD>
+    <TD>ambient_temp=25.0 (C)</TD>
+    <TD>bi-dir_toggle=12.500000</TD>
+    <TD>bidir_output_enable=1.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
+    <TD>board_selection=medium (10&quot;x10&quot;)</TD>
+    <TD>clocks=0.002227</TD>
+    <TD>confidence_level_clock_activity=High</TD>
+</TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
+    <TD>confidence_level_device_models=High</TD>
+    <TD>confidence_level_internal_activity=Medium</TD>
+    <TD>confidence_level_io_activity=Low</TD>
+</TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
+    <TD>customer=TBD</TD>
+    <TD>customer_class=TBD</TD>
+    <TD>devstatic=0.139606</TD>
+</TR><TR ALIGN='LEFT'>    <TD>die=xc7a200tsbg484-1</TD>
+    <TD>dsp_output_toggle=12.500000</TD>
+    <TD>dynamic=0.242378</TD>
+    <TD>effective_thetaja=3.3</TD>
+</TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
+    <TD>family=artix7</TD>
+    <TD>ff_toggle=12.500000</TD>
+    <TD>flow_state=routed</TD>
+</TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
+    <TD>i/o=0.133152</TD>
+    <TD>input_toggle=12.500000</TD>
+    <TD>junction_temp=26.3 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000441</TD>
+    <TD>mgtavcc_dynamic_current=0.000000</TD>
+    <TD>mgtavcc_static_current=0.000000</TD>
+    <TD>mgtavcc_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mgtavcc_voltage=1.000000</TD>
+    <TD>mgtavtt_dynamic_current=0.000000</TD>
+    <TD>mgtavtt_static_current=0.000000</TD>
+    <TD>mgtavtt_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
+    <TD>mmcm=0.106035</TD>
+    <TD>netlist_net_matched=NA</TD>
+    <TD>off-chip_power=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.381984</TD>
+    <TD>output_enable=1.000000</TD>
+    <TD>output_load=5.000000</TD>
+    <TD>output_toggle=12.500000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>package=sbg484</TD>
+    <TD>pct_clock_constrained=3.000000</TD>
+    <TD>pct_inputs_defined=14</TD>
+    <TD>platform=nt64</TD>
+</TR><TR ALIGN='LEFT'>    <TD>process=typical</TD>
+    <TD>ram_enable=50.000000</TD>
+    <TD>ram_write=50.000000</TD>
+    <TD>read_saif=False</TD>
+</TR><TR ALIGN='LEFT'>    <TD>set/reset_probability=0.000000</TD>
+    <TD>signal_rate=False</TD>
+    <TD>signals=0.000524</TD>
+    <TD>simulation_file=None</TD>
+</TR><TR ALIGN='LEFT'>    <TD>speedgrade=-1</TD>
+    <TD>static_prob=False</TD>
+    <TD>temp_grade=commercial</TD>
+    <TD>thetajb=5.0 (C/W)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>thetasa=4.6 (C/W)</TD>
+    <TD>toggle_rate=False</TD>
+    <TD>user_board_temp=25.0 (C)</TD>
+    <TD>user_effective_thetaja=3.3</TD>
+</TR><TR ALIGN='LEFT'>    <TD>user_junc_temp=26.3 (C)</TD>
+    <TD>user_thetajb=5.0 (C/W)</TD>
+    <TD>user_thetasa=4.6 (C/W)</TD>
+    <TD>vccadc_dynamic_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccadc_static_current=0.020000</TD>
+    <TD>vccadc_total_current=0.020000</TD>
+    <TD>vccadc_voltage=1.800000</TD>
+    <TD>vccaux_dynamic_current=0.058780</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_io_dynamic_current=0.000000</TD>
+    <TD>vccaux_io_static_current=0.000000</TD>
+    <TD>vccaux_io_total_current=0.000000</TD>
+    <TD>vccaux_io_voltage=1.800000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_static_current=0.030604</TD>
+    <TD>vccaux_total_current=0.089384</TD>
+    <TD>vccaux_voltage=1.800000</TD>
+    <TD>vccbram_dynamic_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccbram_static_current=0.000749</TD>
+    <TD>vccbram_total_current=0.000749</TD>
+    <TD>vccbram_voltage=1.000000</TD>
+    <TD>vccint_dynamic_current=0.004283</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_static_current=0.031270</TD>
+    <TD>vccint_total_current=0.035553</TD>
+    <TD>vccint_voltage=1.000000</TD>
+    <TD>vcco12_dynamic_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco12_static_current=0.000000</TD>
+    <TD>vcco12_total_current=0.000000</TD>
+    <TD>vcco12_voltage=1.200000</TD>
+    <TD>vcco135_dynamic_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco135_static_current=0.000000</TD>
+    <TD>vcco135_total_current=0.000000</TD>
+    <TD>vcco135_voltage=1.350000</TD>
+    <TD>vcco15_dynamic_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco15_static_current=0.000000</TD>
+    <TD>vcco15_total_current=0.000000</TD>
+    <TD>vcco15_voltage=1.500000</TD>
+    <TD>vcco18_dynamic_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco18_static_current=0.000000</TD>
+    <TD>vcco18_total_current=0.000000</TD>
+    <TD>vcco18_voltage=1.800000</TD>
+    <TD>vcco25_dynamic_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco25_static_current=0.000000</TD>
+    <TD>vcco25_total_current=0.000000</TD>
+    <TD>vcco25_voltage=2.500000</TD>
+    <TD>vcco33_dynamic_current=0.040088</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_static_current=0.005000</TD>
+    <TD>vcco33_total_current=0.045088</TD>
+    <TD>vcco33_voltage=3.300000</TD>
+    <TD>version=2019.1</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -383,13 +550,13 @@
     <TD>lut1_functional_category=LUT</TD>
     <TD>lut1_used=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=83</TD>
+    <TD>lut2_used=80</TD>
     <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=21</TD>
+    <TD>lut3_used=23</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=49</TD>
+    <TD>lut4_used=51</TD>
     <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=50</TD>
+    <TD>lut5_used=51</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
     <TD>lut6_used=155</TD>
     <TD>mmcme2_adv_functional_category=Clock</TD>
@@ -413,8 +580,8 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=133800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=288</TD>
-    <TD>lut_as_logic_util_percentage=0.22</TD>
+    <TD>lut_as_logic_used=287</TD>
+    <TD>lut_as_logic_util_percentage=0.21</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=46200</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
@@ -429,8 +596,8 @@
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=133800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=288</TD>
-    <TD>slice_luts_util_percentage=0.22</TD>
+    <TD>slice_luts_used=287</TD>
+    <TD>slice_luts_util_percentage=0.21</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=267600</TD>
     <TD>slice_registers_fixed=0</TD>
     <TD>slice_registers_used=125</TD>
@@ -439,8 +606,8 @@
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=133800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=288</TD>
-    <TD>lut_as_logic_util_percentage=0.22</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=287</TD>
+    <TD>lut_as_logic_util_percentage=0.21</TD>
     <TD>lut_as_memory_available=46200</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -448,35 +615,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=24</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=24</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=1</TD>
-    <TD>register_driven_from_outside_the_slice_used=25</TD>
-    <TD>register_driven_from_within_the_slice_fixed=25</TD>
-    <TD>register_driven_from_within_the_slice_used=100</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=28</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=28</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=0</TD>
+    <TD>register_driven_from_outside_the_slice_used=28</TD>
+    <TD>register_driven_from_within_the_slice_fixed=28</TD>
+    <TD>register_driven_from_within_the_slice_used=97</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=33450</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=267600</TD>
     <TD>slice_registers_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=125</TD>
     <TD>slice_registers_util_percentage=0.05</TD>
-    <TD>slice_used=86</TD>
-    <TD>slice_util_percentage=0.26</TD>
+    <TD>slice_used=92</TD>
+    <TD>slice_util_percentage=0.28</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=56</TD>
+    <TD>slicel_used=61</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=30</TD>
+    <TD>slicem_used=31</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=33450</TD>
     <TD>unique_control_sets_fixed=33450</TD>
-    <TD>unique_control_sets_used=12</TD>
+    <TD>unique_control_sets_used=13</TD>
     <TD>unique_control_sets_util_percentage=0.04</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.04</TD>
-    <TD>using_o5_and_o6_used=74</TD>
-    <TD>using_o5_output_only_fixed=74</TD>
+    <TD>using_o5_and_o6_used=77</TD>
+    <TD>using_o5_output_only_fixed=77</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=214</TD>
+    <TD>using_o6_output_only_used=210</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -565,10 +732,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:35s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:48s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=674.793MB</TD>
-    <TD>memory_peak=1074.668MB</TD>
+    <TD>memory_gain=687.531MB</TD>
+    <TD>memory_peak=1084.680MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
