--- a/Lab4/Lab_4/Lab_4.runs/impl_1/usage_statistics_webtalk.html
+++ b/Lab4/Lab_4/Lab_4.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Apr  7 13:04:46 2021</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Apr  7 16:58:08 2021</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>45260c5733d4432aaf3b020dcd46529e</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>6</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>87423797bdee5a0e97c4161dcfe31192</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>87423797bdee5a0e97c4161dcfe31192</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -34,17 +34,17 @@
 <TR ALIGN='LEFT'>   <TD>abstractcombinedpanel_remove_selected_elements=2</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
    <TD>addsrcwizard_specify_simulation_specific_hdl_files=1</TD>
-   <TD>basedialog_cancel=7</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=38</TD>
-   <TD>basedialog_yes=9</TD>
+   <TD>basedialog_cancel=9</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=41</TD>
+   <TD>basedialog_yes=12</TD>
    <TD>boardchooser_board_table=1</TD>
    <TD>cmdmsgdialog_ok=5</TD>
 </TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_create_file=1</TD>
    <TD>coretreetablepanel_core_tree_table=2</TD>
    <TD>createconstraintsfilepanel_file_name=1</TD>
    <TD>createsrcfiledialog_file_name=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=104</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=74</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=115</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=79</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
    <TD>graphicalview_zoom_fit=9</TD>
 </TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_in=14</TD>
@@ -57,11 +57,11 @@
    <TD>mainmenumgr_ip=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=2</TD>
    <TD>mainmenumgr_text_editor=1</TD>
-   <TD>msgtreepanel_message_view_tree=17</TD>
+   <TD>msgtreepanel_message_view_tree=20</TD>
    <TD>msgview_information_messages=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>msgview_warning_messages=4</TD>
    <TD>pacommandnames_add_sources=2</TD>
-   <TD>pacommandnames_auto_connect_target=1</TD>
+   <TD>pacommandnames_auto_connect_target=3</TD>
    <TD>pacommandnames_auto_update_hier=5</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_set_as_top=1</TD>
    <TD>pacommandnames_simulation_live_break=3</TD>
@@ -72,20 +72,20 @@
    <TD>pacommandnames_simulation_run_behavioral=47</TD>
    <TD>paviews_code=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_ip_catalog=1</TD>
-   <TD>paviews_project_summary=36</TD>
-   <TD>programdebugtab_open_target=1</TD>
-   <TD>programdebugtab_program_device=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=4</TD>
+   <TD>paviews_project_summary=38</TD>
+   <TD>programdebugtab_open_target=2</TD>
+   <TD>programdebugtab_program_device=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=6</TD>
    <TD>progressdialog_background=2</TD>
    <TD>progressdialog_cancel=1</TD>
    <TD>projectnamechooser_choose_project_location=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
    <TD>rdicommands_delete=3</TD>
-   <TD>rdicommands_save_file=73</TD>
+   <TD>rdicommands_save_file=75</TD>
    <TD>rdicommands_waveform_save_configuration=6</TD>
 </TR><TR ALIGN='LEFT'>   <TD>rdiviews_waveform_viewer=91</TD>
    <TD>removesourcesdialog_also_delete=1</TD>
-   <TD>saveprojectutils_save=1</TD>
+   <TD>saveprojectutils_save=2</TD>
    <TD>simpleoutputproductdialog_generate_output_products_immediately=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>simulationliverunforcomp_specify_time_and_units=2</TD>
    <TD>simulationobjectspanel_simulation_objects_tree_table=18</TD>
@@ -95,9 +95,9 @@
    <TD>srcchooserpanel_create_file=11</TD>
    <TD>srcchoosertable_src_chooser_table=12</TD>
    <TD>srcmenu_ip_hierarchy=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=7</TD>
    <TD>syntheticastatemonitor_cancel=2</TD>
-   <TD>taskbanner_close=9</TD>
+   <TD>taskbanner_close=11</TD>
    <TD>tclconsoleview_clear_all_output=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>tclconsoleview_tcl_console_code_editor=3</TD>
    <TD>waveformnametree_waveform_name_tree=47</TD>
@@ -107,34 +107,35 @@
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=10</TD>
-   <TD>autoconnecttarget=1</TD>
+   <TD>autoconnecttarget=3</TD>
    <TD>closeproject=2</TD>
    <TD>coreview=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>customizecore=1</TD>
    <TD>editdelete=3</TD>
-   <TD>launchprogramfpga=4</TD>
+   <TD>launchprogramfpga=6</TD>
    <TD>newproject=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=3</TD>
+   <TD>openrecenttarget=1</TD>
    <TD>resetlayout=2</TD>
-   <TD>runbitgen=8</TD>
-   <TD>runimplementation=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=2</TD>
+   <TD>runbitgen=11</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runimplementation=1</TD>
+   <TD>runsynthesis=2</TD>
    <TD>savefileproxyhandler=2</TD>
    <TD>settopnode=1</TD>
-   <TD>showview=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationbreak=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>showview=4</TD>
+   <TD>simulationbreak=3</TD>
    <TD>simulationrelaunch=3</TD>
    <TD>simulationrestart=5</TD>
-   <TD>simulationrun=45</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationrunall=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationrun=45</TD>
+   <TD>simulationrunall=5</TD>
    <TD>simulationrunfortime=50</TD>
    <TD>toolssettings=1</TD>
-   <TD>viewtaskimplementation=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>waveformsaveconfiguration=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=1</TD>
+   <TD>waveformsaveconfiguration=7</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=7</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=8</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -174,19 +175,19 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=3</TD>
-    <TD>carry4=23</TD>
+    <TD>carry4=29</TD>
     <TD>dsp48e1=2</TD>
-    <TD>fdre=166</TD>
+    <TD>fdre=183</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdse=21</TD>
     <TD>gnd=11</TD>
-    <TD>ibuf=9</TD>
+    <TD>ibuf=17</TD>
     <TD>ldce=32</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut1=47</TD>
-    <TD>lut2=61</TD>
-    <TD>lut3=44</TD>
-    <TD>lut4=41</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut5=43</TD>
-    <TD>lut6=80</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1=43</TD>
+    <TD>lut2=92</TD>
+    <TD>lut3=61</TD>
+    <TD>lut4=42</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut5=44</TD>
+    <TD>lut6=75</TD>
     <TD>mmcme2_adv=1</TD>
     <TD>obuf=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuft=2</TD>
@@ -198,20 +199,20 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=3</TD>
-    <TD>carry4=23</TD>
+    <TD>carry4=29</TD>
     <TD>dsp48e1=2</TD>
-    <TD>fdre=166</TD>
+    <TD>fdre=183</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdse=21</TD>
     <TD>gnd=11</TD>
-    <TD>ibuf=8</TD>
+    <TD>ibuf=16</TD>
     <TD>iobuf=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ldce=32</TD>
-    <TD>lut1=47</TD>
-    <TD>lut2=61</TD>
-    <TD>lut3=44</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=41</TD>
-    <TD>lut5=43</TD>
-    <TD>lut6=80</TD>
+    <TD>lut1=43</TD>
+    <TD>lut2=92</TD>
+    <TD>lut3=61</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=42</TD>
+    <TD>lut5=44</TD>
+    <TD>lut6=75</TD>
     <TD>mmcme2_adv=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf=4</TD>
     <TD>ramb18e1=2</TD>
@@ -239,7 +240,7 @@
     <TD>flow_state=default</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_augmented=0</TD>
     <TD>slice_registers_newly_gated=0</TD>
-    <TD>slice_registers_total=187</TD>
+    <TD>slice_registers_total=204</TD>
     <TD>srls_augmented=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>srls_newly_gated=0</TD>
     <TD>srls_total=0</TD>
@@ -329,7 +330,7 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>synth-14=1</TD>
-    <TD>timing-17=77</TD>
+    <TD>timing-17=94</TD>
     <TD>timing-20=32</TD>
     <TD>timing-27=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>xdcc-2=1</TD>
@@ -367,7 +368,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
     <TD>bram=0.002044</TD>
-    <TD>clocks=0.003403</TD>
+    <TD>clocks=0.003313</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_clock_activity=Medium</TD>
     <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -376,11 +377,11 @@
     <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-</TR><TR ALIGN='LEFT'>    <TD>devstatic=0.139149</TD>
+</TR><TR ALIGN='LEFT'>    <TD>devstatic=0.139151</TD>
     <TD>die=xc7a200tsbg484-1</TD>
-    <TD>dsp=0.002110</TD>
+    <TD>dsp=0.002103</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>dynamic=0.136395</TD>
+</TR><TR ALIGN='LEFT'>    <TD>dynamic=0.136875</TD>
     <TD>effective_thetaja=3.3</TD>
     <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
@@ -390,7 +391,7 @@
     <TD>i/o=0.004259</TD>
 </TR><TR ALIGN='LEFT'>    <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.9 (C)</TD>
-    <TD>logic=0.000962</TD>
+    <TD>logic=0.001166</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -402,12 +403,12 @@
     <TD>mmcm=0.122184</TD>
 </TR><TR ALIGN='LEFT'>    <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.275544</TD>
+    <TD>on-chip_power=0.276026</TD>
     <TD>output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=sbg484</TD>
-    <TD>pct_clock_constrained=0.000000</TD>
+    <TD>pct_clock_constrained=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>pct_inputs_defined=0</TD>
     <TD>platform=nt64</TD>
     <TD>process=typical</TD>
@@ -416,7 +417,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
     <TD>signal_rate=False</TD>
-</TR><TR ALIGN='LEFT'>    <TD>signals=0.001432</TD>
+</TR><TR ALIGN='LEFT'>    <TD>signals=0.001805</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
     <TD>static_prob=False</TD>
@@ -445,9 +446,9 @@
     <TD>vccbram_static_current=0.000762</TD>
     <TD>vccbram_total_current=0.000916</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.010141</TD>
-    <TD>vccint_static_current=0.030874</TD>
-    <TD>vccint_total_current=0.041015</TD>
+    <TD>vccint_dynamic_current=0.010621</TD>
+    <TD>vccint_static_current=0.030876</TD>
+    <TD>vccint_total_current=0.041497</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -588,29 +589,29 @@
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=4</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>carry4_used=23</TD>
+    <TD>carry4_used=29</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp48e1_functional_category=Block Arithmetic</TD>
     <TD>dsp48e1_used=2</TD>
     <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=166</TD>
+    <TD>fdre_used=183</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdse_functional_category=Flop &amp; Latch</TD>
     <TD>fdse_used=21</TD>
     <TD>ibuf_functional_category=IO</TD>
-    <TD>ibuf_used=9</TD>
+    <TD>ibuf_used=17</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ldce_functional_category=Flop &amp; Latch</TD>
     <TD>ldce_used=32</TD>
     <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=46</TD>
+    <TD>lut1_used=40</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=61</TD>
+    <TD>lut2_used=92</TD>
     <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=44</TD>
+    <TD>lut3_used=61</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=41</TD>
+    <TD>lut4_used=42</TD>
     <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=43</TD>
+    <TD>lut5_used=44</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=80</TD>
+    <TD>lut6_used=75</TD>
     <TD>mmcme2_adv_functional_category=Clock</TD>
     <TD>mmcme2_adv_used=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
@@ -634,34 +635,34 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=133800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=271</TD>
-    <TD>lut_as_logic_util_percentage=0.20</TD>
+    <TD>lut_as_logic_used=306</TD>
+    <TD>lut_as_logic_util_percentage=0.23</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=46200</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=267600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=187</TD>
-    <TD>register_as_flip_flop_util_percentage=0.07</TD>
+    <TD>register_as_flip_flop_used=204</TD>
+    <TD>register_as_flip_flop_util_percentage=0.08</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=267600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=32</TD>
     <TD>register_as_latch_util_percentage=0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=133800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=271</TD>
-    <TD>slice_luts_util_percentage=0.20</TD>
+    <TD>slice_luts_used=306</TD>
+    <TD>slice_luts_util_percentage=0.23</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=267600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=219</TD>
-    <TD>slice_registers_util_percentage=0.08</TD>
+    <TD>slice_registers_used=236</TD>
+    <TD>slice_registers_util_percentage=0.09</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=133800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=271</TD>
-    <TD>lut_as_logic_util_percentage=0.20</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=306</TD>
+    <TD>lut_as_logic_util_percentage=0.23</TD>
     <TD>lut_as_memory_available=46200</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -669,35 +670,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=23</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=23</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=26</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=26</TD>
-    <TD>register_driven_from_outside_the_slice_used=49</TD>
-    <TD>register_driven_from_within_the_slice_fixed=49</TD>
-    <TD>register_driven_from_within_the_slice_used=170</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=14</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=14</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=25</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=25</TD>
+    <TD>register_driven_from_outside_the_slice_used=39</TD>
+    <TD>register_driven_from_within_the_slice_fixed=39</TD>
+    <TD>register_driven_from_within_the_slice_used=197</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=33450</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=267600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=219</TD>
-    <TD>slice_registers_util_percentage=0.08</TD>
-    <TD>slice_used=99</TD>
-    <TD>slice_util_percentage=0.30</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=236</TD>
+    <TD>slice_registers_util_percentage=0.09</TD>
+    <TD>slice_used=94</TD>
+    <TD>slice_util_percentage=0.28</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=64</TD>
+    <TD>slicel_used=55</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=35</TD>
+    <TD>slicem_used=39</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=33450</TD>
     <TD>unique_control_sets_fixed=33450</TD>
-    <TD>unique_control_sets_used=18</TD>
-    <TD>unique_control_sets_util_percentage=0.05</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.05</TD>
-    <TD>using_o5_and_o6_used=44</TD>
-    <TD>using_o5_output_only_fixed=44</TD>
-    <TD>using_o5_output_only_used=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=227</TD>
+    <TD>unique_control_sets_used=20</TD>
+    <TD>unique_control_sets_util_percentage=0.06</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.06</TD>
+    <TD>using_o5_and_o6_used=48</TD>
+    <TD>using_o5_output_only_fixed=48</TD>
+    <TD>using_o5_output_only_used=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=2</TD>
+    <TD>using_o6_output_only_used=256</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -788,8 +789,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>elapsed=00:00:42s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=717.207MB</TD>
-    <TD>memory_peak=1137.699MB</TD>
+    <TD>memory_gain=719.199MB</TD>
+    <TD>memory_peak=1139.320MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
