--- a/Lab4/Lab_4/Lab_4.runs/impl_1/usage_statistics_webtalk.html
+++ b/Lab4/Lab_4/Lab_4.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Apr  7 16:58:08 2021</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Apr  9 04:19:03 2021</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>45260c5733d4432aaf3b020dcd46529e</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>6</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>10</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>87423797bdee5a0e97c4161dcfe31192</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>87423797bdee5a0e97c4161dcfe31192</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -34,90 +34,91 @@
 <TR ALIGN='LEFT'>   <TD>abstractcombinedpanel_remove_selected_elements=2</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
    <TD>addsrcwizard_specify_simulation_specific_hdl_files=1</TD>
-   <TD>basedialog_cancel=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=41</TD>
-   <TD>basedialog_yes=12</TD>
+   <TD>basedialog_cancel=15</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_no=1</TD>
+   <TD>basedialog_ok=43</TD>
+   <TD>basedialog_yes=16</TD>
    <TD>boardchooser_board_table=1</TD>
-   <TD>cmdmsgdialog_ok=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_create_file=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=5</TD>
+   <TD>constraintschooserpanel_create_file=1</TD>
    <TD>coretreetablepanel_core_tree_table=2</TD>
    <TD>createconstraintsfilepanel_file_name=1</TD>
-   <TD>createsrcfiledialog_file_name=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=115</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=79</TD>
+</TR><TR ALIGN='LEFT'>   <TD>createsrcfiledialog_file_name=12</TD>
+   <TD>filesetpanel_file_set_panel_tree=118</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=90</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
-   <TD>graphicalview_zoom_fit=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_in=14</TD>
+</TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_fit=9</TD>
+   <TD>graphicalview_zoom_in=14</TD>
    <TD>graphicalview_zoom_out=16</TD>
    <TD>hcodeeditor_close=2</TD>
-   <TD>hcodeeditor_search_text_combo_box=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_checkpoint=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>hcodeeditor_search_text_combo_box=4</TD>
+   <TD>mainmenumgr_checkpoint=2</TD>
    <TD>mainmenumgr_export=2</TD>
    <TD>mainmenumgr_file=4</TD>
-   <TD>mainmenumgr_ip=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_ip=2</TD>
+   <TD>mainmenumgr_project=2</TD>
    <TD>mainmenumgr_text_editor=1</TD>
    <TD>msgtreepanel_message_view_tree=20</TD>
-   <TD>msgview_information_messages=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgview_warning_messages=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgview_information_messages=4</TD>
+   <TD>msgview_warning_messages=4</TD>
    <TD>pacommandnames_add_sources=2</TD>
-   <TD>pacommandnames_auto_connect_target=3</TD>
-   <TD>pacommandnames_auto_update_hier=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_set_as_top=1</TD>
+   <TD>pacommandnames_auto_connect_target=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=5</TD>
+   <TD>pacommandnames_set_as_top=1</TD>
    <TD>pacommandnames_simulation_live_break=3</TD>
    <TD>pacommandnames_simulation_live_restart=5</TD>
-   <TD>pacommandnames_simulation_live_run=51</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_run_all=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_run=51</TD>
+   <TD>pacommandnames_simulation_live_run_all=5</TD>
    <TD>pacommandnames_simulation_relaunch=3</TD>
    <TD>pacommandnames_simulation_run_behavioral=47</TD>
-   <TD>paviews_code=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_ip_catalog=1</TD>
-   <TD>paviews_project_summary=38</TD>
-   <TD>programdebugtab_open_target=2</TD>
-   <TD>programdebugtab_program_device=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_code=4</TD>
+   <TD>paviews_ip_catalog=1</TD>
+   <TD>paviews_project_summary=43</TD>
+   <TD>programdebugtab_open_target=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=12</TD>
+   <TD>programfpgadialog_program=11</TD>
    <TD>progressdialog_background=2</TD>
    <TD>progressdialog_cancel=1</TD>
-   <TD>projectnamechooser_choose_project_location=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_choose_project_location=1</TD>
+   <TD>projectnamechooser_project_name=1</TD>
    <TD>rdicommands_delete=3</TD>
-   <TD>rdicommands_save_file=75</TD>
-   <TD>rdicommands_waveform_save_configuration=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdiviews_waveform_viewer=91</TD>
+   <TD>rdicommands_save_file=78</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_waveform_save_configuration=6</TD>
+   <TD>rdiviews_waveform_viewer=91</TD>
    <TD>removesourcesdialog_also_delete=1</TD>
    <TD>saveprojectutils_save=2</TD>
-   <TD>simpleoutputproductdialog_generate_output_products_immediately=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationliverunforcomp_specify_time_and_units=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simpleoutputproductdialog_generate_output_products_immediately=2</TD>
+   <TD>simulationliverunforcomp_specify_time_and_units=2</TD>
    <TD>simulationobjectspanel_simulation_objects_tree_table=18</TD>
    <TD>simulationscopespanel_simulate_scope_table=30</TD>
-   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_or_create_source_file=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=3</TD>
+   <TD>srcchooserpanel_add_or_create_source_file=8</TD>
    <TD>srcchooserpanel_create_file=11</TD>
    <TD>srcchoosertable_src_chooser_table=12</TD>
-   <TD>srcmenu_ip_hierarchy=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=7</TD>
-   <TD>syntheticastatemonitor_cancel=2</TD>
-   <TD>taskbanner_close=11</TD>
-   <TD>tclconsoleview_clear_all_output=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>tclconsoleview_tcl_console_code_editor=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=4</TD>
+   <TD>syntheticagettingstartedview_recent_projects=9</TD>
+   <TD>syntheticastatemonitor_cancel=4</TD>
+   <TD>taskbanner_close=13</TD>
+</TR><TR ALIGN='LEFT'>   <TD>tclconsoleview_clear_all_output=1</TD>
+   <TD>tclconsoleview_tcl_console_code_editor=3</TD>
    <TD>waveformnametree_waveform_name_tree=47</TD>
    <TD>waveformview_next_transition=26</TD>
-   <TD>waveformview_previous_transition=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformview_previous_transition=4</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=10</TD>
-   <TD>autoconnecttarget=3</TD>
+   <TD>autoconnecttarget=8</TD>
    <TD>closeproject=2</TD>
    <TD>coreview=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>customizecore=1</TD>
    <TD>editdelete=3</TD>
-   <TD>launchprogramfpga=6</TD>
+   <TD>launchprogramfpga=12</TD>
    <TD>newproject=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=3</TD>
-   <TD>openrecenttarget=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=8</TD>
+   <TD>openrecenttarget=4</TD>
    <TD>resetlayout=2</TD>
-   <TD>runbitgen=11</TD>
+   <TD>runbitgen=17</TD>
 </TR><TR ALIGN='LEFT'>   <TD>runimplementation=1</TD>
    <TD>runsynthesis=2</TD>
    <TD>savefileproxyhandler=2</TD>
@@ -135,7 +136,7 @@
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=8</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=10</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -787,10 +788,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:42s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:40s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=719.199MB</TD>
-    <TD>memory_peak=1139.320MB</TD>
+    <TD>memory_gain=722.008MB</TD>
+    <TD>memory_peak=1139.781MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
